# Mistral-2.0

./: .cproject  .gitmodules  .project  CMakeLists.txt  DESCRIPTION  LICENSE  Makefile  README  README.md  sat.ozn  template.mk
data/zinc/: amaze3.fzn  amaze3.mzn
examples/src/: MistralXCSP.cpp  XCSP3MistralCallbacks.hpp  car_sequencing.cpp  cimpress.cpp  con_test.cpp  costas_array.cpp  flowshop.cpp  mcts_scheduler.cpp  multilist_test.cpp  multiset_test.cpp  pJSSP.cpp  pbo.cpp  pigeons.cpp  preemptif.cpp  preemptif_maxLag.cpp  preemptive-jsp-order.cpp  preemptive-jsp.cpp  round_robin.cpp  sat.cpp  scheduler.cpp  set_test.cpp  simple_linear_constraints.cpp  solver_test.cpp  stack_test.cpp  test.cpp  test_temp.cpp  test_temp.hpp  tree.hpp  tsp_with_time_windows.cpp  unit_test.cpp  var_test.cpp  visu.cpp
fz/: 2DPacking.ozn  Makefile  Makefile.bak  README  alpha.ozn  battleships10.ozn  battleships_1.ozn  battleships_2.ozn  blocksworld_instance_1.ozn  blocksworld_instance_2.ozn  cutstock.ozn  depend.mk  domino.ozn  eq20.ozn  exec  factory_planning_instance.ozn  flatzinc.cpp  flatzinc.hpp  fzn-exec  golomb.ozn  grocery.ozn  install-docker.sh  installVM.sh  jobshop2x2.ozn  knights.ozn  langford.ozn  langford2.ozn  latin_squares_fd.ozn  lexer.lxx  lexer.yy.cpp  magicsq_3.ozn  magicsq_4.ozn  magicsq_5.ozn  main-fz.cpp  min_cost_flow.ozn  mistral-fz  mistral-fzn-packing.fzn  mistral-fzn-perfsq2.fzn  mistral-mzn  multidimknapsack_simple.ozn  (+29 more)
fz/benchmark/: 1.fzn  2.fzn  atsp-instance10_0p25.dzn  atsp-instance5_0p15.dzn  atsp.mzn
fz/experiments/: bugs.txt  default_launch  max_launch  min_launch  mzn2fzn_bugs.txt  opt_parse  sat_launch  verification_bugs.txt  write_errors.sh
(+74 files in other folders)
